add all functional 8 task